<resources>
    <string name="app_name">mUčenje</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lesson_picker_header_text">LEKCIJE</string>
    <string name="quiz_picker_header_text">IZAZOVI</string>
    <string name="username">Korisničko ime</string>
    <string name="password">Lozinka</string>
    <string name="login">Prijavi se</string>
    <string name="missions_header">MISIJE</string>
    <string name="lections">LEKCIJE</string>
    <string name="play">IGRAJ</string>
    <string name="hello">Bok,</string>
    <string name="points_earned">osvojeno bodova:</string>
    <string name="achievements">POSTIGNUĆA</string>
    <string name="missions">MISIJE</string>
    <string name="challenge_header">IZAZOV</string>
    <string name="achievements_header">POSTIGNUĆA</string>
    <string name="lection_header">LEKCIJA</string>
    <string name="finish">Završi</string>
    <string name="confirm_answer">Potvrdi</string>
    <string name="wrong_email_or_password">Krivi email ili lozinka</string>
    <string name="register_here">Registriraj se ovdje.</string>
    <string name="login_here">Prijavi se ovdje.</string>
    <string name="register">Registriraj se</string>
    <string name="repeat_password">Ponovi lozinku</string>
    <string name="email">Email</string>
    <string name="leaderboard">LJESTVICA PORETKA</string>
</resources>