<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.muenje.ui.profileFragment.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profileFragment.ProfileFragment">


        <TextView
            android:id="@+id/profile_header1_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/hello"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_header1_username_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@{viewModel.user.mDisplayName}"
            tools:text=""
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toEndOf="@id/profile_header1_text_view"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_header2_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/points_earned"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_header1_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/profile_header2_points_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="0"
            tools:text="0"
            app:layout_constraintTop_toBottomOf="@id/profile_header1_text_view"
            app:layout_constraintStart_toEndOf="@id/profile_header2_text_view"
            android:textSize="32sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/achievements_button"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="56dp"
            app:cornerRadius="50dp"
            android:text="@string/achievements"
            android:onClick="@{() -> viewModel.goToAchievementsFragment()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/missions_button"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="56dp"
            app:cornerRadius="50dp"
            android:text="@string/missions"
            android:onClick="@{() -> viewModel.goToMissionsFragment()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/achievements_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/leaderboard_button"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="56dp"
            app:cornerRadius="50dp"
            android:text="@string/leaderboard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/missions_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
